--- a/streaming-attoparsec.cabal
+++ b/streaming-attoparsec.cabal
@@ -17,16 +17,16 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Data.Attoparsec.ByteString.Streaming
+  exposed-modules:     Streaming.Attoparsec
   -- other-modules:       
   other-extensions:    CPP, Trustworthy
-  build-depends:       base >=4.7 && <4.9, 
+  build-depends:       base >=4.7 && < 4.10, 
                        bytestring >=0.10 && <0.11, 
-                       transformers >=0.4 && <0.5, 
+                       transformers >=0.4 && <0.6, 
                        mtl >=2.2 && <2.3,
-                       attoparsec,
-                       streaming,
-                       streaming-bytestring
+                       attoparsec > 0.12 && < 0.14,
+                       streaming >= 0.1.4.0 && < 0.1.4.8,
+                       streaming-bytestring >= 0.1.4.0 && < 0.1.4.8
                       
   -- hs-source-dirs:      
   default-language:    Haskell2010
